@@ -5,7 +5,6 @@
   cpio gzip bzip2
   <if-not ARCH="ppc">
     fdisk
-    rescuept
   </if-not>
   <if ARCH="ppc">
     pdisk 
