@@ -71,7 +71,6 @@
 
   <if-not ARCH="ppc">
     fdisk gpart
-    rescuept
     testdisk
   </if-not>
   <if-not ARCH="ppc|sparc">
