@@ -1,3 +1,7 @@
+- diskdrake: drop "Rescue partition table" feature 
+  (was based on rescuept which has been dropped in util-linux, but was quite
+  bad compared to testdisk anyway)
+
 Version 10.4.150 - 24 July 2007, by Olivier "blino" Blin
 - update banner for 2008 beta 1 (from Anne)
 
