@@ -1,3 +1,5 @@
+- remove rescuept (use testdisk instead, which is much nicer)
+
 Version 1.5 - 9 July 2007, by Pascal "Pixel" Rigaux
 
 - add /etc/mke2fs.conf in order to format ext3fs with 4k blocks (#27377)
