@@ -1,3 +1,6 @@
+- diskdrake: drop "Rescue partition table" feature 
+  (was based on rescuept which has been dropped in util-linux, but was quite
+  bad compared to testdisk anyway)
 - drakauth: fix bogus string (#10776)
 - drakbug:
   o display Mandriva Online for mdkapplet in the "select mandriva
